# vsdd-factory

./: .gitignore  .semgrep.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASING.md  STATE.md  current-cycle  deny.toml  po-obligations.md  policies.yaml  red-gate-log-S-12.08.md  reference-manifest.yaml  regression-state.json  release-config.yaml  rust-toolchain.toml  sidecar-learning.md  tech-debt-register.md
crates/factory-dispatcher/: Cargo.toml
crates/factory-dispatcher/src/: aggregator.rs  engine.rs  executor.rs  internal_log.rs  invoke.rs  lib.rs  main.rs  partition.rs  payload.rs  plugin_loader.rs  registry.rs  resolver.rs  resolver_classify_trap.rs  resolver_loader.rs  routing.rs
crates/factory-dispatcher/src/host/: context_fns.rs  emit_event.rs  env.rs  exec_subprocess.rs  log.rs  memory.rs  mod.rs  read_file.rs  write_file.rs
crates/factory-dispatcher/src/sinks/: mod.rs  router.rs
crates/factory-dispatcher/tests/: absolute_path_hook_engagement.rs  ac017_demo_evidence.rs  async_partition_integration.rs  bc_2_02_011_parity.rs  bc_7_03_079_080_parity.rs  bc_9_01_rc1_release_gate_test.rs  event_emission_fault_injection.rs  executor_integration.rs  executor_resolver_integration.rs  full_stack_plugin_invocation.rs  host_functions.rs  host_write_file_integration.rs  internal_log_integration.rs  latency_canary.rs  loads_legacy_registry.rs  resolver_determinism_proptest.proptest-regressions  resolver_determinism_proptest.rs  resolver_error_isolation_test.rs  resolver_load_test.rs  resolver_registry_test.rs  router_integration.rs  routing_integration.rs  s4_07_integration.rs  sinks_file_integration.rs  sinks_otel_grpc.rs  vp078_harness3_telemetry_classification.rs
crates/factory-dispatcher/tests/fixtures/: long_running_resolver.wasm  long_running_resolver.wat  naughty_resolver.wasm  naughty_resolver.wat  trapping_resolver.wasm  trapping_resolver.wat
crates/factory-dispatcher/tests/integration_tests/: circuit_breaker.rs  config_load.rs  datadog.rs  dlq.rs  harness.rs  honeycomb.rs  hybrid.rs  internal_sink_error.rs  lifecycle.rs  mod.rs  otlp_mapping.rs  routing.rs  zero_disk.rs
crates/hook-plugins/block-ai-attribution/: Cargo.toml
crates/hook-plugins/block-ai-attribution/src/: lib.rs  main.rs
crates/hook-plugins/block-ai-attribution/tests/: contract_clean_passes.rs  contract_hook_macro.rs  contract_pattern_matching.rs  edge_cases.rs
crates/hook-plugins/capture-commit-activity/: Cargo.toml
crates/hook-plugins/capture-commit-activity/src/: lib.rs  main.rs
crates/hook-plugins/capture-commit-activity/tests/: contract_emit_event.rs  contract_hook_macro.rs  contract_payload_parsing.rs  contract_subprocess_call.rs  edge_cases.rs
crates/hook-plugins/capture-pr-activity/: Cargo.toml
crates/hook-plugins/handoff-validator/: Cargo.toml
crates/hook-plugins/legacy-bash-adapter/: Cargo.toml
crates/hook-plugins/lint-registry-async-invariant/: Cargo.toml
crates/hook-plugins/pr-manager-completion-guard/: Cargo.toml
crates/hook-plugins/regression-gate/: Cargo.toml
crates/hook-plugins/session-learning/: Cargo.toml
crates/hook-plugins/session-start-telemetry/: Cargo.toml
crates/hook-plugins/tool-failure-hooks/: Cargo.toml
crates/hook-plugins/track-agent-start/: Cargo.toml
crates/hook-plugins/track-agent-stop/: Cargo.toml
crates/hook-plugins/update-wave-state-on-merge/: Cargo.toml
crates/hook-plugins/validate-burst-log/: Cargo.toml
crates/hook-plugins/validate-dispatch-advance/: Cargo.toml
crates/hook-plugins/validate-index-cite-refresh/: Cargo.toml
crates/hook-plugins/validate-per-story-adversary-convergence/: Cargo.toml  build.rs
crates/hook-plugins/validate-pr-review-posted/: Cargo.toml
crates/hook-sdk/: CHANGELOG.md  Cargo.toml  HOST_ABI.md  README.md
crates/hook-sdk-macros/: Cargo.toml  README.md
crates/hook-sdk-macros/src/: lib.rs  resolver_macro.rs
crates/hook-sdk/examples/: hello-hook.rs
crates/hook-sdk/src/: __internal.rs  ffi.rs  host.rs  lib.rs  payload.rs  resolver.rs  result.rs
crates/hook-sdk/tests/: host_write_file_sdk_test.rs  resolver_types_test.proptest-regressions  resolver_types_test.rs  wasm32_resolver_export_integration.rs
crates/sink-core/: Cargo.toml
crates/sink-core/src/: dead_letter.rs  dead_letter_tests.rs  events.rs  lib.rs  path_template.rs  resilience.rs  router_filter.rs
crates/sink-core/tests/: bc_3_07_002_cross_sink_integration.rs  circuit_breaker_integration.rs  circuit_breaker_state_machine.rs  contract_circuit_events.rs  per_sink_config.rs  retry_policy_exponential_backoff.rs  retry_policy_jitter.rs  retry_policy_max_attempts.rs  retry_policy_success_resets.rs
crates/sink-datadog/: Cargo.toml
crates/sink-datadog/src/: lib.rs
crates/sink-datadog/tests/: contract_config_api_stability.rs  contract_config_load.rs  contract_endpoint_default.rs  contract_headers.rs  contract_no_blocking_feature.rs  contract_sink_trait.rs  integration_inherits_http_sink.rs  integration_post_batch.rs
crates/sink-file/: Cargo.toml
crates/sink-file/src/: lib.rs
crates/sink-file/tests/: bc_3_07_002_file_emission.rs
crates/sink-honeycomb/: Cargo.toml
crates/sink-honeycomb/src/: lib.rs
crates/sink-honeycomb/tests/: contract_auth_header.rs  contract_config_load.rs  contract_endpoint_construction.rs  contract_sink_trait.rs  integration_inherits_http_sink.rs  integration_post_batch.rs
crates/sink-http/: Cargo.toml
crates/sink-http/src/: lib.rs  retry.rs
crates/sink-http/tests/: bc_3_07_001_backoff.rs  bc_3_07_002_http_emission.rs  bc_3_07_003_dlq_integration.rs  contract_config_load.rs  contract_sink_trait.rs  error_handling.rs  integration_post_batch.rs  non_blocking.rs
crates/sink-otel-grpc/: Cargo.toml
crates/sink-otel-grpc/src/: lib.rs
crates/sink-otel-grpc/tests/: bc_3_07_002_otel_emission.rs
crates/vsdd-context-resolvers/: Cargo.toml
crates/vsdd-context-resolvers/src/: lib.rs  wave_context.rs
crates/vsdd-context-resolvers/tests/: capability_confinement_test.rs  wave_context_test.proptest-regressions  wave_context_test.rs
specs/: PRD.md  (+5 more)
(+5505 files in other folders)
