[workspace]
resolver = "2"
members = [
    "crates/factory-dispatcher",
    "crates/hook-sdk",
    "crates/hook-sdk-macros",
    "crates/hook-plugins/capture-commit-activity",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/drbothen/vsdd-factory"
authors = ["Joshua Magady"]
rust-version = "1.95"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wasmtime = "44.0"
wasmtime-wasi = "44.0"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
trybuild = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
