[workspace]
resolver = "2"
members = [
    "crates/factory-dispatcher",
    "crates/hook-sdk",
    "crates/hook-sdk-macros",
    "crates/hook-plugins/capture-commit-activity",
    "crates/hook-plugins/session-end-telemetry",
    "crates/hook-plugins/session-start-telemetry",
    "crates/hook-plugins/tool-failure-hooks",
    "crates/hook-plugins/worktree-hooks",
    "crates/hook-plugins/capture-pr-activity",
    "crates/hook-plugins/legacy-bash-adapter",
    "crates/hook-plugins/block-ai-attribution",
    "crates/hook-plugins/session-learning",
    "crates/sink-core",
    "crates/sink-file",
    "crates/sink-otel-grpc",
    "crates/sink-http",
    "crates/sink-datadog",
    "crates/sink-honeycomb",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/drbothen/vsdd-factory"
authors = ["Joshua Magady"]
rust-version = "1.95"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wasmtime = "44.0"
wasmtime-wasi = "44.0"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
trybuild = "1.0"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
wat = "1"
# OTLP/gRPC sink (S-1.9). The opentelemetry crate ecosystem moves in
# lockstep at 0.31 as of April 2026; pin all four together so a
# cargo-update on one doesn't break the others. `gen-tonic` pulls in
# the tonic 0.14 + prost 0.14 codegen path that opentelemetry-otlp 0.31
# itself uses, so the mock OTLP receiver in our integration test can
# reuse the same generated server stub the dispatcher uses for the
# client.
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic", "logs"] }
tonic = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
httpmock = "0.7"

[workspace.lints.rust]
# VSDD traceability convention uses uppercase BC-N.NN.NNN and TV-NNN ids
# as test function name prefixes (e.g. test_BC_4_05_001_*, test_TV_001_*).
# These are intentional deviations from snake_case to preserve the
# spec-traceability mapping; suppressing the lint workspace-wide avoids
# having to scatter #![allow(non_snake_case)] across 50+ test files.
non_snake_case = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
