[workspace]
resolver = "2"
members = [
    "crates/factory-dispatcher",
    "crates/hook-sdk",
    "crates/hook-sdk/examples/wasm_resolver_export",
    "crates/hook-sdk-macros",
    "crates/hook-plugins/capture-commit-activity",
    "crates/hook-plugins/session-end-telemetry",
    "crates/hook-plugins/session-start-telemetry",
    "crates/hook-plugins/tool-failure-hooks",
    "crates/hook-plugins/worktree-hooks",
    "crates/hook-plugins/capture-pr-activity",
    "crates/hook-plugins/legacy-bash-adapter",
    "crates/hook-plugins/block-ai-attribution",
    "crates/hook-plugins/handoff-validator",
    "crates/hook-plugins/pr-manager-completion-guard",
    "crates/hook-plugins/regression-gate",
    "crates/hook-plugins/session-learning",
    "crates/hook-plugins/track-agent-start",
    "crates/hook-plugins/track-agent-stop",
    "crates/hook-plugins/update-wave-state-on-merge",
    "crates/hook-plugins/warn-pending-wave-gate",
    "crates/hook-plugins/validate-pr-review-posted",
    "crates/hook-plugins/validate-artifact-path",
    "crates/hook-plugins/validate-burst-log",
    "crates/hook-plugins/validate-dispatch-advance",
    "crates/hook-plugins/validate-index-cite-refresh",
    "crates/hook-plugins/validate-state-structure",
    "crates/hook-plugins/lint-registry-async-invariant",
    "crates/hook-plugins/validate-per-story-adversary-convergence",
    "crates/vsdd-context-resolvers",
    "crates/hook-plugins/validate-stable-anchors",
    "crates/sink-core",
    "crates/sink-file",
    "crates/sink-otel-grpc",
    "crates/sink-http",
    "crates/sink-datadog",
    "crates/sink-honeycomb",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/drbothen/vsdd-factory"
authors = ["Joshua Magady"]
rust-version = "1.95"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_norway 0.9: maintained fork of serde_yaml (dtolnay, deprecated 2024).
# Migrated from serde_yaml 0.9.34 in 2026-05 (TD #72). serde_yml 0.0.12 was
# the initial target but was found to carry RUSTSEC-2025-0068 (unsound, no
# patched version). serde_norway uses unsafe-libyaml-norway (actively
# maintained) and is advisory-clean per cargo audit. Drop-in API: from_str,
# to_string, Value, Mapping all preserved.
# See: https://crates.io/crates/serde_norway
serde_norway = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wasmtime = "44.0"
wasmtime-wasi = "44.0"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
trybuild = "1.0"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
wat = "1"
# OTLP/gRPC sink (S-1.9). The opentelemetry crate ecosystem moves in
# lockstep at 0.31 as of April 2026; pin all four together so a
# cargo-update on one doesn't break the others. `gen-tonic` pulls in
# the tonic 0.14 + prost 0.14 codegen path that opentelemetry-otlp 0.31
# itself uses, so the mock OTLP receiver in our integration test can
# reuse the same generated server stub the dispatcher uses for the
# client.
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic", "logs"] }
tonic = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
httpmock = "0.7"
proptest = "1.6"
wasmparser = "0.248"

[workspace.lints.rust]
# VSDD traceability convention uses uppercase BC-N.NN.NNN and TV-NNN ids
# as test function name prefixes (e.g. test_BC_4_05_001_*, test_TV_001_*).
# These are intentional deviations from snake_case to preserve the
# spec-traceability mapping; suppressing the lint workspace-wide avoids
# having to scatter #![allow(non_snake_case)] across 50+ test files.
non_snake_case = "allow"

[workspace.lints.clippy]
# Workspace-wide lints are "warn" so individual crates can override to
# "deny" without conflict. CI runs `cargo clippy --workspace --all-targets
# -- -D warnings`, which elevates all warnings to errors — so workspace
# "warn" effectively becomes "deny" at CI time. Crates that need stricter
# enforcement (e.g., hook plugins, resolvers) declare [lints.clippy]
# overrides with explicit "deny" for documentation purposes.
#
# AC-010 / BC-4.12.004 INV1: panic-free guarantee for WASM resolver production
# code. Pre-existing crates have intentional expect/unwrap usages
# (static-regex compilation, mutex poison guards, test helpers) that are
# suppressed at the crate level.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.lints.rust.unexpected_cfgs]
# S-15.01 T-3b/AC-015: Kani proof harnesses use `#[cfg(kani)]` for the
# VP-077 partition-correctness harnesses. Kani sets this cfg at proof time;
# normal cargo builds do not, causing unexpected_cfgs warnings without this
# allowlist entry. This is intentional — Kani-targeted code.
check-cfg = ["cfg(kani)"]
level = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
