[package]
name = "factory-dispatcher"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "vsdd-factory v1.0 dispatcher binary — routes Claude Code hook events to WASM plugins"
publish = false

[[bin]]
name = "factory-dispatcher"
path = "src/main.rs"

[lib]
name = "factory_dispatcher"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
regex.workspace = true
chrono.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
filetime.workspace = true
