[package]
name = "factory-dispatcher"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "vsdd-factory v1.0 dispatcher binary — routes Claude Code hook events to WASM plugins"
publish = false

[[bin]]
name = "factory-dispatcher"
path = "src/main.rs"

[lib]
name = "factory_dispatcher"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
regex.workspace = true
chrono.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio.workspace = true
tracing.workspace = true
sink-core = { path = "../sink-core", version = "0.0.1" }
sink-datadog = { path = "../sink-datadog", version = "0.0.1" }
sink-file = { path = "../sink-file", version = "0.0.1" }
sink-honeycomb = { path = "../sink-honeycomb", version = "0.0.1" }
sink-http = { path = "../sink-http", version = "0.0.1" }
sink-otel-grpc = { path = "../sink-otel-grpc", version = "0.0.1" }

[dev-dependencies]
tempfile.workspace = true
filetime.workspace = true
wat.workspace = true
# Mock OTLP receiver for the sinks_otel_grpc integration test (S-1.9).
# We pull in tokio + tonic + the same proto crate the sink uses so the
# mock and the real client share message types verbatim.
tokio.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
opentelemetry-proto.workspace = true
# S-4.07 integration tests: mock HTTP server for datadog/honeycomb/http sinks.
httpmock.workspace = true
