[package]
name = "vsdd-hook-sdk-macros"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Procedural macros for vsdd-hook-sdk. Internal — use vsdd-hook-sdk's re-exports instead of depending on this crate directly."
publish = false

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
