[package]
name = "sink-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "vsdd-factory v1.0 sink trait + routing filter primitives shared by every sink driver"
publish = false

[lib]
name = "sink_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio = { workspace = true, optional = true }

[features]
# Enable tokio-based async resilience helpers (with_retry).
# Downstream sinks that wire the resilience layer enable this feature.
tokio-resilience = ["dep:tokio"]

[dev-dependencies]
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }
