[package]
name = "sink-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "vsdd-factory v1.0 sink trait + routing filter primitives shared by every sink driver"
publish = false

[lib]
name = "sink_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio = { workspace = true }
rand = "0.8"

[features]
# Enable tokio-based async resilience helpers (with_retry).
# Downstream sinks that wire the resilience layer enable this feature.
# Note: tokio is always linked since with_retry is always compiled;
# this feature acts as a marker for downstream configuration.
tokio-resilience = []

[dev-dependencies]
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
tempfile.workspace = true
httpmock.workspace = true
# Cross-sink integration test (AC-010) imports all three driver crates.
sink-http = { path = "../sink-http", version = "0.0.1" }
sink-otel-grpc = { path = "../sink-otel-grpc", version = "0.0.1" }
sink-file = { path = "../sink-file", version = "0.0.1" }
