[package]
name = "sink-honeycomb"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "vsdd-factory v1.0 sink driver: Honeycomb Events API sink (wraps sink-http, S-4.03)"
publish = false

[lib]
name = "sink_honeycomb"
path = "src/lib.rs"

[dependencies]
sink-core = { path = "../sink-core", version = "0.0.1" }
sink-http = { path = "../sink-http", version = "0.0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
