[package]
name = "sink-otel-grpc"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "vsdd-factory v1.0 sink driver: OTLP/gRPC log forwarder for the local Grafana/Loki stack"
publish = false

[lib]
name = "sink_otel_grpc"
path = "src/lib.rs"

[dependencies]
sink-core = { path = "../sink-core", version = "0.0.1" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
opentelemetry-proto.workspace = true
tonic.workspace = true
hostname.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }

[lints]
workspace = true
