[package]
name = "block-ai-attribution"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: PreToolUse gate that blocks git commits containing AI attribution patterns"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
