[package]
name = "capture-commit-activity"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: emits commit.made events when git commit is detected in PostToolUse/Bash payloads"
publish = false

# Hook plugins ship as WASI commands (_start entry point) built via
# `cargo build --target wasm32-wasip1`. The [lib] target carries testable
# logic; [[bin]] wraps the macro-generated entry point that calls into the lib.
[lib]
path = "src/lib.rs"

[[bin]]
name = "capture-commit-activity"
path = "src/main.rs"

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
