[package]
name = "capture-pr-activity"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: emits PR lifecycle events (pr.created/pr.merged/pr.closed) to the vsdd-factory observability pipeline"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
