[package]
name = "capture-pr-activity"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: emits PR lifecycle events (pr.created/pr.merged/pr.closed) to the vsdd-factory observability pipeline"
publish = false

# Hook plugins ship as WASI commands (_start entry point) built via
# `cargo build --target wasm32-wasip1`. The [lib] target carries testable
# logic; [[bin]] wraps the WASI entry point that calls into the lib.
# The explicit hyphenated [[bin]] name produces a hyphenated wasm output
# filename that matches what hooks-registry.toml references — without it,
# Cargo would default to underscore-converted lib name (rc.7 fix).
[lib]
path = "src/lib.rs"

[[bin]]
name = "capture-pr-activity"
path = "src/main.rs"

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
