[package]
name = "lint-registry-async-invariant"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: CI lint enforcement — registry schema v2 required; on_error=block implies async=false (BC-7.06.001)"
publish = false

# Hook plugins ship as WASI commands (_start entry point) built via
# `cargo build --target wasm32-wasip1`. The [lib] target carries testable
# logic; [[bin]] wraps the macro-generated entry point that calls into the lib.
[lib]
path = "src/lib.rs"

[[bin]]
name = "lint-registry-async-invariant"
path = "src/main.rs"

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = "1.6"
vsdd-hook-sdk = { path = "../../hook-sdk" }

[lints]
workspace = true
