[package]
name = "pr-manager-completion-guard"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: guards pr-manager SubagentStop; blocks early stop before all 9 PR lifecycle steps complete (FM4 prevention)"
publish = false

# Hook plugins ship as WASI commands (_start entry point) built via
# `cargo build --target wasm32-wasip1`. The [lib] target carries testable
# logic; [[bin]] wraps the macro-generated entry point that calls into the lib.
[lib]
path = "src/lib.rs"

[[bin]]
name = "pr-manager-completion-guard"
path = "src/main.rs"

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
