[package]
name = "track-agent-stop"
version = "1.0.0-rc.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: emits agent.stop telemetry event on SubagentStop dispatches"
publish = false

# Hook plugins ship as WASI commands (_start entry point) built via
# `cargo build --target wasm32-wasip1`. The [lib] target carries testable
# logic; [[bin]] wraps the macro-generated entry point that calls into the lib.
[lib]
path = "src/lib.rs"

[[bin]]
name = "track-agent-stop"
path = "src/main.rs"

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
